--- a/Contact us/contact.html
+++ b/Contact us/contact.html
@@ -24,7 +24,7 @@
           </div>
       
           <ul class="md:flex md:items-center z-[100] md:z-auto md:static absolute bg-white w-full left-0 md:w-auto md:py-0 py-4 md:pl-0 pl-7 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in-duration-500 font-[jejugothic]">
-            <li class="mx-4 my-6 md:my-0"><a class="hover:underline" href="/Mountscript/cod/index.html">Home</a></li>
+            <li class="mx-4 my-6 md:my-0"><a class="hover:underline" href="/Mountscript/index.html">Home</a></li>
             <li class="mx-4 my-6 md:my-0"><a class="hover:underline" href="/Mountscript/About us/about.html">About</a></li>
             <li class="mx-4 my-6 md:my-0"><a class="hover:underline" href="#">Contact us</a></li>
             <li class="mx-4 my-6 md:my-0"><a class="hover:underline" href="/Mountscript/Catagories/catagory.html">Catagories</a></li>
